--- a/style.css
+++ b/style.css
@@ -1,5 +1,59 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Geist Mono", serif;
+}
+body {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card {
+  padding: 40px;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  background-color: #f2f2f2;
+  gap: 10px;
+}
+.card p {
+  width: 100%;
+  font-size: 11px;
+  font-weight: 600;
+}
+.social-links{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 12px;
+}
+.social-links a img:hover{
+    transform: translateY(-5px);
+}
+.social-links a img{
+    width: 20px;
+    cursor: pointer;
+    transition: ease .3s all;
+}
+.profileImage{
+    width: 100%;
+    height: 230px;
+    object-fit: cover;
+    border-radius: 12px;
+}
+.card h1{
+    font-size: 32px;
+}
+
+@media screen and (max-width: 600px) {
+    .card{
+        width: 100%;
+        padding: 30px 20px;
+        gap: 8px;
+    }
 }
